@@ -1,5 +1,3 @@
 cmake ..
 make
 make install
-
-
